tui/src/chatwidget/snapshots/ody_tui__chatwidget__tests__signed_out_usage_command_reports_api_key_login_requirement.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
■ Configure an API key with `ody login <provider>` to use /usage.
